[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty"
path = "src/main.rs"

[lib]
name = "rusty"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.107"
